# snake

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yml
src/: assets.rs  component.rs  event.rs  main.rs  resource.rs  state.rs
src/state/: game_over.rs  loading.rs  mod.rs  running.rs  score.rs  starting.rs
