[package]
name = "snake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_asset_loader = "0.6.0"
direction = "0.18.1"
rand = "0.8.4"

[profile.release]
opt-level = 3 # "s"
lto = true
